force-app/main/default/objects/Application_Log__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Changed Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>