force-app/main/default/objects/Application_Log__c/fields/Old_ValueFor__c.field-meta.xml
<CustomField>
    <fullName>Old_ValueFor__c</fullName>
    <formula>IF(CONTAINS(Old_Value__c, &apos;001&apos;),	 
HYPERLINK(LEFT($Api.Partner_Server_URL_540, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_540))+ Old_Value__c,&apos;Account&apos;),
IF(CONTAINS(Old_Value__c, &apos;003&apos;),	HYPERLINK(LEFT($Api.Partner_Server_URL_540, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_540))+ Old_Value__c,&apos;Contact&apos;),Old_Value__c
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Value</label>
    <type>Text</type>
</CustomField>