force-app/main/default/objects/Application_Log__c/fields/Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Record_Link__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_540, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_540))+ Record_ID__c,&apos;Record&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record</label>
    <type>Text</type>
</CustomField>